# OneDimCal

./: CMakeLists.txt  LinearAlgebra.f08  README.md  TDquantumSolver.f08  TIquantumsolver.f08  constants.f08  derivative_operator.f08  eigen_sort.f08  gridinfo.f08  kinetic_energy.f08  main.f08  matrix_solver.f08  nhqmTI.f08  plot.gnu  potential.f08  test.f08  theta_trajectory.f08  tiquantum.f08
